[gd_scene load_steps=2 format=3 uid="uid://f8s0fabh8apc"]

[ext_resource type="Script" uid="uid://by61phg5luad6" path="res://Scripts/hud_pause.gd" id="1_3luul"]

[node name="Hud_Pause" type="CanvasLayer"]
script = ExtResource("1_3luul")

[node name="Start" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.359375
anchor_top = 0.266667
anchor_right = 0.640625
anchor_bottom = 0.437037
offset_bottom = 70.1013
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Come√ßar"
flat = true
clip_text = true

[node name="Exit" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.359375
anchor_top = 0.562963
anchor_right = 0.640625
anchor_bottom = 0.733333
offset_left = 9.0
offset_top = -4.0
offset_right = 9.0
offset_bottom = -4.0
theme_override_font_sizes/font_size = 60
text = "Fechar "
flat = true
clip_text = true

[connection signal="mouse_entered" from="Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
